@@ -1,3 +1,15 @@
+2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b17
+
+ * Fix: Link to comments overview on mainpage.
+
+ * Fix: getCaptionDate when using exiftags.
+        Use "Image Generated" first, then "Image Created".
+
+ * Fix: Some wordings. Again thanks to Julien.
+
+ * Change: Increased length for album names that gettruncated in
+           select boxes for reorder and move. 
+
 2008-08-28 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b16
 
  * FIX: unhtmlentities() changed 0 values to '',
